was able to get the 3 items aligned correctly so that canned and its 4 items and dry goods and its 4 items and the image is aligned for both freezer items and pantry items.

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
 .food_list {
-    background-color: grey;
+    background-color: lightgrey;
+}
+.lists_and_image article,
+.lists_and_image img {
+    display: inline-block;
 }
